# Edu_RAG

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  deploy_exclude.txt  pyproject.toml  requirements.txt  start.bat  stop.bat  架构演进建议.md
.github/workflows/: docker-build.yml  dr-smoke-test.yml  e2e.yml  frontend-test.yml  lint.yml  test.yml
.workbuddy/memory/: 2026-07-16.md  2026-07-17.md  MEMORY.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
data/: test_ai_knowledge.txt
docker/: .env.cloud.example  Dockerfile  daemon.json  docker-compose.cloud.4gb.yml  docker-compose.cloud.yml  docker-compose.frpc.yml  docker-compose.override.yml  docker-compose.yml
docker/frp/: frpc.toml  frps.toml
docker/milvus/: cluster.md
docker/monitoring/: alerts.yml
docker/mysql/: check_auth.sql  (+4 more)
docs/: P1P2改造审查报告.md  cloud-deployment-checklist.md  code-review-2026-07-18.md  disaster-recovery.md  dr-deploy-runbook.md  load-test-report-2026-07-18.md  mysql故障记录与快速排查.md  启动与使用文档.md  架构设计与完整链路分析.md  系统架构设计准则.md  问题排查记录.md  项目代码库评估报告_2026-07-16.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: backup.py  backup_verify.py  cloud_init.sh  compare_configs.py  config_drift_check.py  crontab.txt  disaster_drill.py  evaluate_offline.py  failover_check.py  migrate_chroma_to_milvus.py  mysql_promote.py  mysql_replication_setup.py  seed_test_data.py  setup_frp.sh  setup_swap.sh  sync_milvus.py
src/: __init__.py
tests/: conftest.py
(+198 files in other folders)
