[project]
name = "edu_rag"
version = "2.0.0"
description = "四层 RAG 架构的智能教育题库系统"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.0",
    "orjson>=3.10.0",
    "aiofiles>=24.1.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "redis[hiredis]>=5.2.0",
    "openai>=1.59.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "PyMuPDF>=1.25.0",
    "python-docx>=1.1.0",
    "markdown>=3.7.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "requests>=2.31.0",
    "alembic>=1.13.0",
]
ragas = [
    "ragas>=0.2.0",
    "datasets>=3.0.0",
]
monitoring = [
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.scripts]
edu-rag = "src.orchestration.app:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
